# python_project_template

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  badges.py  pyproject.toml  requirements.txt  setup.cfg
.badges/: bandit.json  pycodestyle.json  pydocstyle.json  pyright.json  pytest.json
docs/: Makefile
docs/source/: conf.py  hello_world.rst  index.rst
docs/source/_templates/: package.rst_t  toc.rst_t
src/hello_world/: __init__.py  _print.py
tests/: hello_world_test.py
